@@ -20,6 +20,7 @@
 
     WATO:
     * 0559 FIX: WATO snapshots: improved validation of (uploaded) snapshots...
+    * 0709 FIX: Fix NoneType has not attribute userdb_automatic_sync bug in D-WATO
 
     BI:
     * 0669 FIX: Fixed regex matching in BI when using character groups [...]...
